# Agentic-Document-Extraction

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  Zero_to_Hero_Study_Handbook.html  Zero_to_Hero_Study_Handbook.md  Zero_to_Hero_Study_Handbook.ps  Zero_to_Hero_Study_Handbook.rich.html  alembic.ini  conftest.py  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  mcp_server.py  metrics.py  telemetry.py
backend/app/models/: db_models.py  enums.py  schemas.py
backend/app/routers/: documents.py  extractions.py  providers.py  schemas.py
backend/app/services/: jobs.py
backend/app/services/eval/: __init__.py  calibration.py  metrics.py
backend/app/services/extraction/: business_rules.py  error_classify.py  graph.py  presets.py  validation.py  vlm_extractor.py
backend/app/services/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  openai_provider.py  output_parser.py  prompts.py  prompts_loader.py  registry.py
backend/app/services/ocr/: __init__.py  base.py  docling_provider.py  glm_ocr_provider.py  paddleocr_provider.py  pymupdf_provider.py  registry.py
backend/app/utils/: file_handler.py
backend/scripts/: e2e_validation.py  validate_llm_providers.py
backend/tests/: conftest.py  test_agentic.py  test_business_rules.py  test_cache.py  test_checkpointing.py  test_config.py  test_docling_provider.py  test_documents.py  test_durability.py  test_eval_calibration.py  test_eval_judge.py  test_extraction_graph.py  test_extraction_schemas.py  test_fetch_docvqa.py  test_glm_ocr_provider.py  test_health.py  test_integration.py  test_llm_registry.py  test_mcp_server.py  test_ocr_registry.py  test_output_parser.py  test_paddleocr_provider.py  test_presets.py  test_prompts_loader.py  test_providers.py  test_reviews.py  test_routes.py  test_schemas.py  test_sse_and_cache.py  test_telemetry.py  test_validation.py  test_vlm_extractor.py
docs/: FAQ.md  MIGRATION_GUIDE.md  RELEASE_NOTES.md  UPGRADE_SUMMARY.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/schemas/: page.tsx
frontend/src/components/: ExtractionForm.tsx  ExtractionResult.tsx  FieldTable.tsx  FileUpload.tsx  ReviewPanel.tsx
frontend/src/lib/: api.ts
scripts/: eval_diff.py  release.py
